# jarvis

./: .aider.chat.history.md  .aider.input.history  .env  .env.example  .gitignore  .vscodeignore  AGENT_SELECTION_DECISION_TREES.md  ANALYTICS_DASHBOARD_USER_GUIDE.md  APPMANAGER_DEBUG_SUMMARY.md  ARCHITECTURE.md  AUDIO_FIXES_README.md  BENCHMARKING_GUIDE.md  BUILD_STATUS.md  CHANGELOG.md  COMPLEXITY_DEPENDENCY_ANALYSIS.md  CONTRIBUTING.md  COQUI_TTS_PLANNING.md  DESKTOP_LAUNCHERS_READY.md  DESKTOP_LAUNCHER_GUIDE.md  Desktop_Jarvis_Launcher.py  FAST_SLOW_PATH_ROUTING_GUIDE.md  FINAL_GIT_PUSH_SUMMARY.md  GETTING_STARTED_COMPLETE.md  GIT_COMMIT_SUMMARY.md  Here's the complete project structure  IMPLEMENTATION_QUICK_START.md  JARVIS_ARCHITECTURE_PHILOSOPHY.md  JARVIS_ORCHESTRATION_IMPLEMENTATION_PLAN.md  JARVIS_PROMPT_QUICK_REFERENCE.md  JARVIS_SELF_AWARENESS_COMPLETE.md  JARVIS_SIMPLIFICATION_PLAN.md  Launch_Jarvis.command  Launch_Jarvis.py  Launch_Jarvis_Desktop.command  Launch_Jarvis_Simple.command  MIGRATION_GUIDE.md  NEXT_ITEMS.md  OPEN_INTERPRETER_INTEGRATION.md  OPEN_INTERPRETER_MCP_GUIDE.md  PHASE_1_COMPLETION_REPORT.md  (+175 more)
jarvis/: .env 2.example  .env.example  .gitignore  .gitignore 2  =4.0.0  CHANGELOG.md  CHANGELOG_MCP.md  README.md  Start_Jarvis.command  WEB_UI_GUIDE.md  benchmark_system.py  check_jarvis_dir.py  config.py  create_jarvis_dir.py  debug_settings.py  diagnose_audio.py  dir_check_results.txt  jarvis_app.py  jarvis_settings_app.py  main.py  pyproject.toml  requirements-desktop.txt  requirements.txt  run_mcp_test.py  setup_default_voice.py  start_desktop.sh  start_jarvis.py  start_ui.bat  test_advanced_features.py  test_agent_tools.py  test_complete_mcp_system.py  test_mcp_config.py  test_mcp_integration.py  test_mcp_tool_integration.py  test_simple_close.py  test_window_close.py  verify_installation.py
jarvis/audio/: apple_tts.py  coqui_tts.py  microphone.py  multilang_tts.py  processors.py  streaming_tts.py  tts.py  voice_enhancement.py  whisper_speech.py
(+488 files in other folders)
